# Synaptica

./: .env.example  .gitignore  AGENTS.md  README.md  kientruc.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
cli/: esbuild.config.mjs  package.json
doc/: API-DOCS-GUIDE.md  DATABASE.md  DEVELOPING.md  GOAL.md  PRODUCT.md  PROJECT-MANAGEMENT-ARCHITECTURE.md  RUST-BACKEND-OPTIMIZATION-PLAN.md  RUST-MIGRATION-STATUS.md  RUST-MIGRATION.md  SECURITY.md  SPEC-implementation.md  THPT-INTEGRATION.md  THPT-PLAN.md
server-rs/: Cargo.toml  README.md
server-rs/src/: auth.rs  config.rs  db.rs  main.rs  metrics.rs  request_id.rs  runner.rs  scheduler.rs
server-rs/src/models/: agent.rs  agent_api_key.rs  agent_config_revision.rs  agent_runtime_state.rs  agent_task_session.rs  agent_wakeup_request.rs  approval.rs  approval_comment.rs  asset.rs  board.rs  company.rs  company_class.rs  company_department.rs  company_post.rs  company_secret.rs  company_space.rs  cost_event.rs  dms.rs  goal.rs  heartbeat_run.rs  heartbeat_run_event.rs  issue.rs  issue_attachment.rs  issue_comment.rs  mod.rs  project.rs  project_workspace.rs
server-rs/src/routes/: activity.rs  adapters.rs  admin.rs  agents.rs  approvals.rs  assets.rs  boards.rs  companies.rs  company_classes.rs  company_departments.rs  company_posts.rs  company_spaces.rs  costs.rs  dashboard.rs  dms.rs  events.rs  goals.rs  health.rs  heartbeats.rs  invites.rs  issues.rs  join_requests.rs  labels.rs  llms.rs  members.rs  misc.rs  mod.rs  projects.rs  secrets.rs  sprints.rs  workspaces.rs
ui/: index.html  (+1 more)
(+90 files in other folders)
